<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:background="@color/white">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">

           <androidx.viewpager.widget.ViewPager
               android:id="@+id/view_pager"
               android:layout_width="match_parent"
               android:layout_height="150dp"
               android:background="@drawable/red_border" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:padding="5dp">

                   <ImageView
                       android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:src="@drawable/customer_30" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="30dp"
                       android:gravity="center"
                       android:paddingLeft="20dp"
                       android:paddingRight="20dp"
                       android:text="@string/myAcc"
                       android:textColor="@color/black" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="30dp"
                       android:background="@drawable/btn_background"
                       android:gravity="center"
                       android:paddingLeft="10dp"
                       android:paddingRight="10dp"
                       android:text="@string/movicelPrime"
                       android:textColor="@color/white" />

               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:padding="5dp"
                   android:weightSum="10">

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="30dp"
                       android:layout_weight="7"
                       android:gravity="center_vertical"
                       android:paddingRight="20dp"
                       android:text="@string/sampleNo"
                       android:textColor="@color/black"
                       android:textStyle="bold" />

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="30dp"
                       android:layout_weight="3"
                       android:background="@drawable/btn_background_orange"
                       android:gravity="center"
                       android:text="@string/recharge"
                       android:textColor="@color/white" />

               </LinearLayout>

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:paddingLeft="10dp"
                   android:paddingTop="10dp"
                   android:text="@string/prepaid" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:paddingLeft="10dp"
                   android:paddingBottom="10dp"
                   android:text="@string/lastUsed" />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:weightSum="10">

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="10dp"
                       android:layout_weight="4"
                       android:background="@drawable/red_border"
                       android:gravity="center"
                       android:padding="5dp"
                       android:text="@string/switchAcc"
                       android:textColor="@color/red" />

                   <Space
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="2" />

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_marginRight="10dp"
                       android:layout_weight="4"
                       android:background="@drawable/red_border"
                       android:gravity="center"
                       android:padding="5dp"
                       android:text="@string/linkAcc"
                       android:textColor="@color/red" />

               </LinearLayout>

               <View
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:layout_marginTop="15dp"
                   android:background="@android:color/darker_gray" />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="5dp"
                   android:background="#11DA19"
                   android:orientation="vertical"
                   android:padding="10dp">

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/talktime"
                       android:textColor="@color/white" />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/talktimeInfo"
                       android:textColor="@color/white" />

               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:weightSum="10">

                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_margin="5dp"
                       android:layout_weight="5"
                       android:background="@color/red"
                       android:orientation="vertical"
                       android:padding="5dp">

                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:gravity="center"
                           android:padding="5dp"
                           android:text="@string/viewPlan"
                           android:textColor="@color/white" />

                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:gravity="center"
                           android:padding="5dp"
                           android:text="@string/planExp"
                           android:textColor="@color/white" />

                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_margin="10dp"
                           android:background="@drawable/white_border"
                           android:gravity="center"
                           android:padding="5dp"
                           android:text="@string/switchAcc"
                           android:textColor="@color/white" />

                   </LinearLayout>

                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_margin="5dp"
                       android:layout_weight="5"
                       android:background="@color/red"
                       android:orientation="vertical"
                       android:padding="5dp">

                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:gravity="center"
                           android:padding="5dp"
                           android:text="@string/totalBal"
                           android:textColor="@color/white" />

                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:gravity="center"
                           android:text="@string/remBal"
                           android:textColor="@color/white" />

                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_margin="5dp"
                           android:background="@drawable/white_border"
                           android:gravity="center"
                           android:padding="10dp"
                           android:text="@string/checkUsage"
                           android:textColor="@color/white" />

                   </LinearLayout>

               </LinearLayout>

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="10dp"
                   android:text="@string/balUsage" />

           </LinearLayout>

       </LinearLayout>

   </ScrollView>

</RelativeLayout>